# cloth-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build-cross.sh  build-w32.cmd  build.sh  cloth.cpp  cloth.hpp  main.cpp  mingw-cross.cmake  world.cpp  world.hpp
cmake-modules/: FindGLEW.cmake
sample-scenes/: single_sphere.lua  sphere_test.lua
src/: CMakeLists.txt  cloth.cpp  cloth.hpp  main.cpp  math_utils.cpp  math_utils.hpp  platform.hpp.in  posix_time.cpp  script.cpp  script.hpp  script_collection.cpp  script_detail.hpp  script_plane.cpp  script_sphere.cpp  script_vec.cpp  script_vec.hpp  surface.cpp  surface.hpp  time.hpp  w32_compat.hpp  w32_time.cpp  world.cpp  world.hpp
src/script/: collection.cpp  collection.hpp  lua_compat.cpp  lua_compat.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  utils.hpp  vec.cpp  vec.hpp
